--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "python.analysis.extraPaths": [
-        "./code"
+        "/home/leonardo/Scrivania/Uni/automatedReasoning/congruence-closure-AR/code"
     ]
 }
